# options-trading-ai

./: .env.example  .gitignore  README.md  projectdescription.md  projectstatus.md  pyproject.toml
docs/: scheduling.md  strategy_plan.md
scripts/: collect_snapshots.sh  ingest_snapshot.py  run_auto_trader.sh  run_backtest.py
src/trading_ai/: __init__.py  __main__.py  cli.py  settings.py
src/trading_ai/backtest/: __init__.py  data_loader.py  engine.py
src/trading_ai/clients/: __init__.py  alpaca_client.py  alpha_vantage_client.py  base.py  marketaux_client.py  news_aggregator.py  news_client.py  polygon_client.py  yahoo_client.py
src/trading_ai/core/: collector.py  pipeline.py
src/trading_ai/data/: cache.py  duckdb_store.py
src/trading_ai/features/: __init__.py  technicals.py
src/trading_ai/risk/: __init__.py  manager.py
src/trading_ai/service/: auto_trader.py
src/trading_ai/strategies/: __init__.py  base.py  momentum_iv.py
src/trading_ai/utils/: dns.py
tests/: test_auto_trader.py  test_backtest.py  test_cache.py  test_collector.py  test_features.py  test_news_aggregator.py  test_risk.py  test_settings.py  test_strategy.py
